public/setup/css/setup.css
/* ... */
.advance-prop{
    margin-bottom: 16px;
    border-width: 2px;
    border-color: #EAEAEA;
    margin-top: 0;
    line-height: 7px;
}

.add-environment-container .environment-cont {
    background: #f2f2f2;
    padding: 20px 10px;
    border-radius: 5px;
    margin-bottom: 25px;
}

.setup-content .list-group-item{
    padding: 20px 20px 20px 60px;
}
.radio-content{
    position: absolute;
    left:12px;
}
.font-awesome-radio-container{
    padding-left: 10px;
    padding-right: 15px;
}

/*** custom checkboxes ***/
.font-awesome-radio {
    display:none;
}

/* to hide the radio itself */
.font-awesome-radio + label:before {
    font-family: FontAwesome;
    display: inline-block;
    cursor: pointer;
}

.font-awesome-radio + label {
    font-size: 23px;
    line-height: 40px;
    color: #b8b8b8;
}

/* unchecked icon */
.font-awesome-radio + label:before {
    content: "\f10c";
}
/* space between radio and label */
.font-awesome-radio + label:before {
    /* letter-spacing: 10px; */
}

/* checked icon */
.font-awesome-radio:checked + label:before {
    content: "\f192";
}
/* allow space for check mark */
.font-awesome-radio:checked + label:before {
    color: #72af46;
    /* letter-spacing: 5px; */
}

/* cursor for disabled input checkbox */
.font-awesome-radio:disabled + label:before {
    cursor: no-drop;
    color: #d7d6d6;
}

.form-modules {
    padding: 30px 0 30px;
    margin-top: 15px;
    height: 310px;
    overflow-y: scroll;
    overflow-x: hidden;
}

.setup-content.mt-25 {
    margin-top: 25px;
}

.nav-block.nav-tabs > li{
    float: none;
}
.nav.nav-block.nav-tabs>li>a:hover, .nav.nav-block.nav-tabs>li>a:focus {
    background-color: #932e2a;
    color: #fff;
}

.nav.nav-block.nav-tabs>li.active>a, .nav.nav-block.nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
    background-color: #932e2a;
    color: #fff;
    border-color: transparent;
    border-radius: 3px;
}

.setup-content .nav-block.nav-tabs > li {
    padding: 0;
}
.setup-content .nav-block.nav-tabs li a {
    padding: 20px 15px;
    color: #a5a2a2;
    font-weight: bold;
}

#melis-installer-event-do-response{
    overflow:auto;
    height: 500px;
    background: #222;
    color: #d0d0d0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    width: 100%;
    resize:none;
    font-family: "Lucida Console Regular", Monospace;
    font-size: 12px;
    word-wrap: break-word;
    white-space: pre-wrap;
    white-space: -moz-pre-wrap;
    white-space: -pre-wrap;
    white-space: -o-pre-wrap;
    word-wrap: break-word;
}

.modal-setup-module-form-configuration {
    padding: 50px 0px 50px;
    height: auto;
    overflow: auto;
    position: relative;
}
.modal-setup-module-form-configuration-content {
    padding: 0 50px;
    height: 550px;
    overflow: auto;
}

.modal-setup-module-form-configuration span.btn-block.btn-primary {
    margin-top: 0;
}
.modal-btn-close-container {
      padding: 0 50px;
}
.melis-installer-module-configuration-form-content{
    height: 486px;
    overflow: scroll;
    padding: 5px 20px;
}
#module-selection {
    display: none;
}

.list-group-descrip {
    position: relative;
    padding-left: 45px;
}

/* Melis svg */
.melis-svg {
    width: 30px;
    height: 30px;
    position: absolute;
    top: 5px;
    left: 0;
}

.melis-svg.melis-core .bg-color {
    fill: #ef6623;
}

.melis-svg.melis-core .light-color {
    fill: #f7962c;
}
.melis-svg.melis-cms .bg-color {
    fill: #67b345;
}

.melis-svg.melis-cms .light-color {
    fill: #85c556;
}
/*
 * Addeby: Junry
 * Responsive
 */
@media (max-width: 991px) {
    #environment-form .add-environment {
        margin: 2em 0;
        text-align: left !important;
    }
}

